# Orthogonal-Constrained-Gated-Sparse-Attention

./: Getting_started.md  README.md  README_OrthGSA.md  eval_results.json  outputs  pyproject.toml  requirements.txt  untitled.txt  uv.toml
configs/: config_qwen3_1.7b_128k.yaml  config_qwen3_1.7b_16k.yaml  config_qwen3_1.7b_192k.yaml  config_qwen3_1.7b_256k.yaml  config_qwen3_1.7b_320k.yaml  config_qwen3_1.7b_32k.yaml  config_qwen3_1.7b_64k.yaml  config_qwen3_1.7b_64k_ring.yaml  config_qwen3_4b.yaml  config_qwen3_4b_128k.yaml  config_qwen3_4b_64k.yaml  config_qwen3_4b_96k.yaml  config_qwen3_8b_10k.yaml  config_qwen3_8b_128k.yaml  config_qwen3_8b_128k_ring.yaml  config_qwen3_8b_12k.yaml  config_qwen3_8b_16k.yaml  config_qwen3_8b_32k.yaml  config_qwen3_8b_32k_ring.yaml  config_qwen3_8b_64k.yaml  config_qwen3_8b_64k_ring.yaml  config_qwen3_8b_64k_ring_conservative.yaml  config_qwen3_8b_8k.yaml  deepspeed_ulysses_64k.json  deepspeed_zero2.json  deepspeed_zero2_32k.json  deepspeed_zero2_64k.json  deepspeed_zero3_1.7b_128k.json  deepspeed_zero3_1.7b_16k.json  deepspeed_zero3_1.7b_192k.json  deepspeed_zero3_1.7b_256k.json  deepspeed_zero3_1.7b_320k.json  deepspeed_zero3_1.7b_64k.json  deepspeed_zero3_10k.json  deepspeed_zero3_128k.json  deepspeed_zero3_12k.json  deepspeed_zero3_16k.json  deepspeed_zero3_4b_128k.json  deepspeed_zero3_4b_64k.json  deepspeed_zero3_4b_96k.json  (+7 more)
docs/: Mathematical_Theory.md  README_OrthGSA.md  run_cmd.txt
orthgsa/: __init__.py
orthgsa/data/: __init__.py  slimpajama.py
orthgsa/layers/: __init__.py  cayley.py  gsa.py  mhc.py  ring_attention.py
orthgsa/models/: __init__.py  orthgsa_layer.py  orthgsa_model.py
orthgsa/utils/: __init__.py  training_utils.py
scripts/: convert_deepspeed_checkpoint.py  diagnose_memory.py  evaluate.py  launch_train.sh  resume_deepspeed.py  setup_env.sh  test_ddp.py  train.py  train_deepspeed.py  train_ring_attention.py  training_status.txt
wandb/: latest-run
wandb/run-20260113_225055-ammnf6vm/: run-ammnf6vm.wandb
wandb/run-20260113_225242-xwtti30z/: run-xwtti30z.wandb
wandb/run-20260113_225450-b5no3ila/: run-b5no3ila.wandb
wandb/run-20260113_225806-bbcw6874/: run-bbcw6874.wandb
wandb/run-20260113_230240-h8cdinxt/: run-h8cdinxt.wandb
wandb/run-20260113_230736-tkmx04k5/: run-tkmx04k5.wandb
wandb/run-20260113_231116-3r7tayas/: run-3r7tayas.wandb
wandb/run-20260113_231732-k2ymzydw/: run-k2ymzydw.wandb
wandb/run-20260113_232629-iqf2er0o/: run-iqf2er0o.wandb
wandb/run-20260113_232921-7c2xnql8/: run-7c2xnql8.wandb
wandb/run-20260113_233449-ficesnjm/: run-ficesnjm.wandb
wandb/run-20260113_235312-2h11akx9/: run-2h11akx9.wandb
wandb/run-20260113_235919-zci2nxek/: run-zci2nxek.wandb
wandb/run-20260114_000208-70yyt8wz/: run-70yyt8wz.wandb
wandb/run-20260114_000633-56owxd0x/: run-56owxd0x.wandb
wandb/run-20260114_010741-16f37kjp/: run-16f37kjp.wandb
wandb/run-20260114_011412-07f4pzn5/: run-07f4pzn5.wandb
wandb/run-20260114_015616-9u1y5iol/: run-9u1y5iol.wandb
wandb/run-20260114_020339-bwp26lwa/: run-bwp26lwa.wandb
(+46 files in other folders)
