[project]
name = "orthgsa"
version = "0.1.0"
description = "OrthGSA: Orthogonal-Constrained Gated Sparse Attention using Cayley Transform"
readme = "README_OrthGSA.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OrthGSA Authors"}
]
keywords = ["transformer", "attention", "sparse-attention", "cayley-transform", "orthogonal", "deep-learning", "deepspeed", "distributed-training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "tokenizers>=0.15.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "zstandard>=0.22.0",  # Required for SlimPajama dataset (zstd compressed files)
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "einops>=0.7.0",
    "deepspeed>=0.14.0",
    # S3 storage (for streaming datasets from S3 using boto3)
    "boto3>=1.28.0",
    "botocore>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cuda = [
    "triton>=2.1.0",
]
# Note: flash-attn requires special installation, see README

[project.scripts]
orthgsa-train = "scripts.train:main"
orthgsa-train-ds = "scripts.train_deepspeed:main"  # DeepSpeed training (recommended for multi-GPU)
orthgsa-eval = "scripts.evaluate:main"

[project.urls]
Homepage = "https://github.com/your-org/OrthGSA"
Documentation = "https://github.com/your-org/OrthGSA#readme"
Repository = "https://github.com/your-org/OrthGSA"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orthgsa"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

# Ensure compatible S3 package versions are resolved together
constraint-dependencies = [
    "botocore>=1.31.0",
    "boto3>=1.28.0",
]

[tool.uv.sources]
# Use PyTorch index for CUDA builds
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
